# RandomForests_Workshop

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
exercises/: 01_penguin_classification.ipynb  02_polynomial_regression.ipynb  README.md  RF_Classification.ipynb
worked-solutions/: 01_penguin_classification.ipynb  02_polynomial_regression.ipynb
